Migrate to fish

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,14 @@
 [metadata]
-name = colcon-zsh
-version = attr: colcon_zsh.__version__
+name = colcon-fish
+version = attr: colcon_fish.__version__
 url = https://colcon.readthedocs.io
 project_urls =
-    Changelog = https://github.com/colcon/colcon-zsh/milestones?direction=desc&sort=due_date&state=closed
-    GitHub = https://github.com/colcon/colcon-zsh/
-author = Dirk Thomas
-author_email = web@dirk-thomas.net
-maintainer = Dirk Thomas
-maintainer_email = web@dirk-thomas.net
+    Changelog = https://github.com/colcon/colcon-fish/milestones?direction=desc&sort=due_date&state=closed
+    GitHub = https://github.com/colcon/colcon-fish/
+author = Alvaro Gaona
+author_email = alvgaona@gmail.com
+maintainer = Alvaro Gaona
+maintainer_email = alvgaona@gmail.com
 classifiers =
     Development Status :: 3 - Alpha
     Environment :: Plugins
@@ -19,7 +19,7 @@ classifiers =
     Programming Language :: Python
     Topic :: Software Development :: Build Tools
 license = Apache License, Version 2.0
-description = Extension for colcon to provide Z shell scripts.
+description = Extension for colcon to provide Fish shell scripts.
 long_description = file: README.rst
 keywords = colcon
 
@@ -62,13 +62,13 @@ markers =
 
 [options.entry_points]
 colcon_core.shell =
-    zsh = colcon_zsh.shell.zsh:ZShell
+    fish = colcon_fish.shell.fish:FishShell
 
 [options.package_data]
-colcon_zsh.shell.template = *.em
+colcon_fish.shell.template = *.em
 
 [flake8]
 import-order-style = google
 
 [coverage:run]
-source = colcon_zsh
+source = colcon_fish
