--- a/setup.cfg
+++ b/setup.cfg
@@ -5,10 +5,10 @@ url = https://colcon.readthedocs.io
 project_urls =
     Changelog = https://github.com/colcon/colcon-fish/milestones?direction=desc&sort=due_date&state=closed
     GitHub = https://github.com/colcon/colcon-fish/
-author = Alvaro Gaona
-author_email = alvgaona@gmail.com
-maintainer = Alvaro Gaona
-maintainer_email = alvgaona@gmail.com
+author = Dirk Thomas
+author_email = web@dirk-thomas.net
+maintainer = Dirk Thomas
+maintainer_email = web@dirk-thomas.net
 classifiers =
     Development Status :: 3 - Alpha
     Environment :: Plugins
@@ -55,7 +55,7 @@ filterwarnings =
     ignore:pkg_resources is deprecated as an API::flake8_import_order
     ignore:SelectableGroups dict interface is deprecated::flake8
     ignore:Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated::pyreadline
-junit_suite_name = colcon-zsh
+junit_suite_name = colcon-fish
 markers =
     flake8
     linter
