--- a/pixi.toml
+++ b/pixi.toml
@@ -1,9 +1,9 @@
-[project]
+[workspace]
 authors = ["Alvaro <alvgaona@gmail.com>"]
 channels = ["conda-forge"]
 description = "Add a short description here"
 name = "colcon-fish"
-platforms = ["linux-64"]
+platforms = ["linux-64", "osx-arm64"]
 version = "0.1.0"
 
 [tasks]
