--- a/pixi.toml
+++ b/pixi.toml
@@ -16,3 +16,5 @@ pytest-cov = ">=6.0.0,<7"
 flake8 = ">=7.1.1,<8"
 python = "<3.13"
 colcon-core = ">=0.18.2,<0.19"
+cmake = ">=4.2.0,<5"
+pip = ">=25.3,<26"
